// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PixelBoard should match snapshot 1`] = `
<div>
  <div
    class="w-full h-screen"
  >
    <div
      class="absolute inset-0 bg-canvas-dark"
    >
      <canvas
        class="w-full h-full cursor-crosshair "
        height="0"
        width="0"
      />
      <div
        class="absolute bottom-6 left-4 bg-black/20 backdrop-blur-xl border border-white/10 rounded-2xl px-4 py-2 text-sm z-10 pointer-events-none transition-all duration-300 ease-out translate-x-0 translate-y-0 opacity-100"
      >
        <p
          class="font-mono"
          style="color: rgb(146, 155, 201);"
        >
          10
          x
        </p>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`PixelBoard should match snapshot as guest 1`] = `
<div>
  <div
    class="w-full h-screen"
  >
    <div
      class="absolute inset-0 bg-canvas-dark"
    >
      <canvas
        class="w-full h-full cursor-crosshair "
        height="0"
        width="0"
      />
      <div
        class="absolute bottom-6 left-4 bg-black/20 backdrop-blur-xl border border-white/10 rounded-2xl px-4 py-2 text-sm z-10 pointer-events-none transition-all duration-300 ease-out translate-x-0 translate-y-0 opacity-100"
      >
        <p
          class="font-mono"
          style="color: rgb(146, 155, 201);"
        >
          10
          x
        </p>
      </div>
      <div
        class="absolute top-4 left-1/2 -translate-x-1/2 z-10 pointer-events-none"
      >
        <div
          class="bg-yellow-400/20 backdrop-blur-xl border border-yellow-400/30 rounded-2xl px-4 py-2 text-sm"
          style="color: rgb(146, 155, 201);"
        >
          You are viewing as a guest. Sign in to place pixels.
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;
